src/cli/doctor/snapshots/asupersync__cli__doctor__tests__core_diagnostics_report_bundle.snap
---
source: src/cli/doctor/mod.rs
expression: snapshot
---
[
  {
    "commands": [
      {
        "command_id": "command-001",
        "exit_code": 101,
        "outcome_class": "failed",
        "tool": "rch"
      },
      {
        "command_id": "command-002",
        "exit_code": 2,
        "outcome_class": "failed",
        "tool": "asupersync"
      }
    ],
    "description": "Baseline failure fixture with critical finding and failed gate evidence.",
    "evidence": [
      {
        "evidence_id": "evidence-001",
        "outcome_class": "failed",
        "source": "structured_log"
      },
      {
        "evidence_id": "evidence-002",
        "outcome_class": "failed",
        "source": "trace"
      }
    ],
    "findings": [
      {
        "finding_id": "finding-001",
        "severity": "critical",
        "status": "open",
        "title": "Obligation leak during shutdown path"
      },
      {
        "finding_id": "finding-002",
        "severity": "high",
        "status": "in_progress",
        "title": "Replay mismatch for cancellation timeline"
      }
    ],
    "fixture_id": "baseline_failure_path",
    "provenance": {
      "generated_at": "<scrubbed>",
      "generated_by": "doctor_asupersync",
      "run_id": "run-doctor-failure",
      "scenario_id": "doctor-core-report-failure",
      "seed": "1337",
      "trace_id": "trace-doctor-failure"
    },
    "summary": {
      "critical_findings": 1,
      "overall_outcome": "failed",
      "status": "failed",
      "total_findings": 2
    }
  },
  {
    "commands": [
      {
        "command_id": "command-010",
        "exit_code": 0,
        "outcome_class": "success",
        "tool": "rch"
      }
    ],
    "description": "Healthy baseline fixture with deterministic replay-ready artifacts.",
    "evidence": [
      {
        "evidence_id": "evidence-010",
        "outcome_class": "success",
        "source": "benchmark"
      }
    ],
    "findings": [
      {
        "finding_id": "finding-010",
        "severity": "low",
        "status": "resolved",
        "title": "Baseline diagnostics fixture coverage verified"
      }
    ],
    "fixture_id": "happy_path",
    "provenance": {
      "generated_at": "<scrubbed>",
      "generated_by": "doctor_asupersync",
      "run_id": "run-doctor-happy",
      "scenario_id": "doctor-core-report-happy",
      "seed": "2026",
      "trace_id": "trace-doctor-happy"
    },
    "summary": {
      "critical_findings": 0,
      "overall_outcome": "success",
      "status": "healthy",
      "total_findings": 1
    }
  },
  {
    "commands": [
      {
        "command_id": "command-020",
        "exit_code": 130,
        "outcome_class": "cancelled",
        "tool": "rch"
      }
    ],
    "description": "Partial-data fixture with cancelled outcome and minimal still-valid envelope.",
    "evidence": [
      {
        "evidence_id": "evidence-020",
        "outcome_class": "cancelled",
        "source": "structured_log"
      }
    ],
    "findings": [],
    "fixture_id": "partial_data_path",
    "provenance": {
      "generated_at": "<scrubbed>",
      "generated_by": "doctor_asupersync",
      "run_id": "run-doctor-partial",
      "scenario_id": "doctor-core-report-partial",
      "seed": "777",
      "trace_id": "trace-doctor-partial"
    },
    "summary": {
      "critical_findings": 0,
      "overall_outcome": "cancelled",
      "status": "degraded",
      "total_findings": 0
    }
  }
]
